# droidstar-enhanced

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Gemini.md  Info.plist  Main.qml  MainTab.qml  NEXUSVOICE_MASTER_PLAN.md  README.md  README_macOS.txt  build_dmg.sh  droidstar.cpp  droidstar.h  main.cpp  package_dmg.sh  patch_memory_buttons.py  plan.md
.cache/clangd/index/: CRCenc.cpp.42E4CE385624C195.idx  CRCenc.h.4269BEE22E355E98.idx  DMRDefines.h.14C1ED8F8D3BCFEC.idx  Golay24128.cpp.C3256D68B2BF8F62.idx  Golay24128.h.2DA209F064C74A23.idx  M17Convolution.cpp.F78793C1FC517309.idx  M17Convolution.h.37605F751CC2549E.idx  M17Defines.h.91A4EF0B1D6C3196.idx  MMDVMDefines.h.F5C3B9764A7C2D7F.idx  SHA256.cpp.A812949C6D77993B.idx  SHA256.h.BCCCFD4118F3A65B.idx  YSFConvolution.cpp.CE16EA71362A6F05.idx  YSFConvolution.h.98A92269CED9F906.idx  YSFFICH.cpp.6A75B23AF0D0E50E.idx  YSFFICH.h.13C478F1A6C22586.idx  ambe3600x2400.c.9BD43FBDD476A0EF.idx  ambe3600x2400_const.h.8F63A30DC9CB7366.idx  ambe3600x2450.c.90025274E066712C.idx  ambe3600x2450_const.h.94497D7D8EF5AB84.idx  audioengine.cpp.CF6B678B7EA478F1.idx  audioengine.h.60ECF43F56E7ABF6.idx  aux_sub.cc.D1AB3D0842AEADDB.idx  aux_sub.h.E24A128EB178F1BE.idx  basic_op.h.4436B696B1C1BCB5.idx  basicop2.cc.846C27819A441443.idx  cbptc19696.cpp.4F987389641CEC89.idx  cbptc19696.h.5B85223D7DCFF6D1.idx  cgolay2087.cpp.43C769D8C2BA8310.idx  cgolay2087.h.07A68396848FC274.idx  ch_decode.cc.46BF07F8AF2B867E.idx  ch_decode.h.EC591B54F6CB5600.idx  ch_encode.cc.24189B78241D98FC.idx  ch_encode.h.691AD08128A060E4.idx  chamming.cpp.A6A6C573C34E2975.idx  chamming.h.03081418E2F2C49A.idx  codebooks.cpp.09E3874407497DCE.idx  codec2.cpp.E2102119532EDB47.idx  codec2_api.h.AE0FEE0D050FBF16.idx  codec2_internal.h.BDA7033F41F76D55.idx  crs129.cpp.75F3725E6ED58372.idx  (+96 more)
.gemini/skills/performance-optimization/: SKILL.md
.gemini/skills/security-verification/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
Frameworks/AGL.framework/: AGL.tbd
core/: audioengine.cpp  audioengine.h  dcs.cpp  dcs.h  dmr.cpp  dmr.h  droidstar.cpp  droidstar.h  httpmanager.cpp  iax.cpp  iax.h  m17.cpp  m17.h  mode.cpp  mode.h  nexusvoice_c_api.cpp  nexusvoice_c_api.h  nxdn.cpp  nxdn.h  p25.cpp  p25.h  posix_serial.cpp  posix_serial.h  ref.cpp  ref.h  serialambe.cpp  serialambe.h  serialmodem.cpp  serialmodem.h  udp_socket.cpp  udp_socket.h  xrf.cpp  xrf.h  ysf.cpp  ysf.h
core/mbe/: mbevocoder.cpp
nexusvoice-app/: README.md  pubspec.yaml
nexusvoice-app/android/app/: build.gradle.kts
nexusvoice-app/android/app/src/main/: AndroidManifest.xml
nexusvoice-app/android/app/src/main/kotlin/com/yuryjajitzky/nexusvoice_app/: MainActivity.kt
nexusvoice-app/ios/Runner/: Info.plist
nexusvoice-app/ios/Runner.xcodeproj/: project.pbxproj
nexusvoice-app/lib/: main.dart
nexusvoice-app/lib/core/: nv_bindings.dart  nv_controller.dart
nexusvoice-app/lib/ui/desktop/: main_desktop.dart
nexusvoice-app/lib/ui/mobile/: main_mobile.dart
nexusvoice-app/lib/ui/shared/: level_meter.dart  logs_panel.dart  main_panel.dart  presets_panel.dart  ptt_button.dart  settings_panel.dart  status_bar.dart
nexusvoice-app/linux/: CMakeLists.txt
nexusvoice-app/linux/runner/: my_application.cc
nexusvoice-app/macos/Runner/: DebugProfile.entitlements
nexusvoice-app/macos/Runner.xcodeproj/: project.pbxproj
nexusvoice-app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nexusvoice-app/macos/Runner/Configs/: AppInfo.xcconfig
nexusvoice-app/test/: widget_test.dart
nexusvoice-app/web/: index.html  manifest.json
nexusvoice-app/windows/: CMakeLists.txt
nexusvoice-app/windows/runner/: Runner.rc  main.cpp
ui/desktop/: MainDesktop.qml  MainTabDesktop.qml
ui/mobile/: AboutTab.qml  Main.qml  MainTab.qml  SettingsTab.qml  StationLogTab.qml
